Comment out backend test script in index.html for cleaner initial load

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="css/styles.css" />
 
     <!-- Backend Test Script -->
-    <script>
+    <!-- <script>
       // Test backend on page load
       window.addEventListener("load", async () => {
         try {
@@ -87,7 +87,7 @@
             : "current-image-mode bg-warning";
         }
       }
-    </script>
+    </script> -->
   </head>
   <body>
     <!-- Navigation Bar -->
